--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name"         : "simple-webserver-example"
   , "version"      : "0.0.0"
   , "description"  : "A simple functional example webserver for Node.js"
-  , "main"         : "index.js"
+  , "main"         : "db.js"
   , "dependencies" : {
         "swig"  : "~0.13.5"
       , "after" : "~0.7.0"
